# flexicmd

./: CMakeLists.txt  README.md  flexicmd.cpp
include/: Engine.h  ICommand.h  Subject.h  Wrapper.h
src/: Engine.cpp  Subject.cpp  main.cpp
tests/: CMakeLists.txt  TestCases.h  TestRunner.h  main.cpp  test_commands.cpp
